[package]
name = "monitoring-probe"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }

